package im;

import "im.hxcommon.proto";

message pushMsgReq
{
	required  string  msgid       = 1;  //
	required  string  fromid	    = 2;  //发送者id
	required  string  toid	      = 3;  //接收者id,格式:(w/m/p)_(nc/c/e)_custID
	required  string  content     = 4;  // json
	required  string  msgtype     = 5;  // 
}

message pushMsgRsp
{
    required 	string 	toid	= 1;  //接收者id,格式:custID
    required  string  msgid     = 2; //例如：57aaf823e4b0f15272ee9d04
     required  string  ack     = 3;   //应答为1，否则为空
     required  string  read     = 4;   //已阅读为1，否则为空
}

message pushAuthReq
{
	required  string  ip       = 1;  // 客户端的IP。
	required  string  port       = 2;//客户端的port
 
}

message pushAuthRsp
{
	  required ResultCode code    = 1;//成功为0，失败为1
}