package im;

import "im.hxcommon.proto";

//option optimize_for = LITE_RUNTIME;

// 客服消息载体
message P2CMsg  
{
	required string  sessionid  = 1;  // 客服会话id
	required string  msgid      = 2;  // 客户端默认填空，由服务端生成
	optional  string guid       = 3;  // 客户端填写，服务端回传
	required string  fromid		  = 4;  // 发送者id，格式为:(w/m/p)_(nc/c/e)_custID
	required string  toid		    = 5;  // 接收者id，格式:(w/m/p)_(nc/c/e)_custID
	required uint64  sendtime   = 6;  // 消息发送时间，客户端填0
	required string  content    = 7;  // json格式的消息内容,utf8编码 包括订单信息和商品信息
	required bool    isread     = 8;  // 消息是否被已读  
}

// 描述客服会话双方
message P2CSession
{
	required string consumerid   = 1; // 消费者id,格式为:(w/m/p)_(nc/c/e)_custID
	required string kefuid       = 2; // 客服id,格式为:(w/m/p)_(nc/c/e)_custID
	required string sessionid    = 3; // 会话id 
}


// 建立客服会话或者留言
message CreateP2CSessionReq
{
	required string consumerid      = 1; // 消费者id，格式为:(w/m/p)_(nc/c/e)_custID
	// 例如:m_e_0603201000000000000
    // entid=0603201000000000000,其中06032010000=11位企业互生号,00000000=8位日期序列号
	required string entid           = 2; // 格式为:custID,19位的纯数字
	required string content         = 3; // 头像、昵称等信息(json格式company_name,company_logo)
}

// 响应建立客服会话或者留言
message CreateP2CSessionRsp
{
	required P2CSession  session      = 1; // 会话双方 
	required string      welcomeword  = 2; // 欢迎语,utf8编码
	required uint64      resptime     = 3; // 回复时间，仅供客服端使用
	required string      content      = 4; // 头像、昵称等信息(json格式company_name,company_logo)
	required ResultCode  code         = 5; // 返回码
}


// 结束客服会话
message CloseP2CSessionReq
{
    required string      userid       = 1; // 结束会话发起方
	required string      entid        = 2; // 企业ID，格式为:custID,19位的纯数字
	required P2CSession  session      = 3; // 会话双方 
	required string      content      = 4; // 头像、昵称等信息(json格式 consumer_id,consumer_name,consumer_head,kefu_id,company_name,company_logo)
}

// 服务器响应结束客服会话、服务器通知被结束方
message CloseP2CSessionRsp
{
  required string      userid        = 1; // 消息回复的对象
  required string      greeting      = 2; // 结束语,utf8编码
  required uint64      resptime      = 3;  // 回复时间，仅供客服端使用
  required string      content       = 4; // 头像、昵称等信息(json格式 consumer_id,consumer_name,consumer_head,kefu_id,company_name,company_logo)
  required ResultCode  code          = 5; 
}


// 服务器响应消息
message P2CMsgRsp
{
	//userid: it's wired, bacause the framework is not able to forward or delivery message via session between client and server,
	//warnning: maybe it'll be discarded in the future
  required string      userid   = 1; // 消息回复的对象
	optional string      guid     = 2; // 服务端回传
	required ResultCode  code     = 3;
}
            
// 客户端发送ACK确认消息已收到
message P2CMsgAckReq
{
  required string  userid  = 1; // 消息发送端的对象, 格式为:(w/m/p)_(nc/c/e)_custID
	required string  msgid   = 2; // 客服消息id
}
 
// 服务器发送ACK确认消息已收到
message P2CMsgAckRsp
{
	required string      userid  = 1; // 消息回复的对象, 格式为:(w/m/p)_(nc/c/e)_custID
	required ResultCode  code 	 = 3;
}

// 客户端发送消息已读
message P2CMsgReadReq
{
	required string  userid = 1; // 消息回复的对象   
	required string  msgid  = 2; // 客服消息id
}

// 服务器响应已读消息
message P2CMsgReadRsp
{
	required string      userid = 1; // 消息回复的对象, 格式为:(w/m/p)_(nc/c/e)_custID
	required ResultCode  code   = 3;
}


// 转移客服基本结构
message P2CSwitchEntity   
{
	required string consumerid  = 1; // 消费者id，格式为:(w/m/p)_(nc/c/e)_custID
	required string newkefuid   = 2; // 新客服id，格式为:(w/m/p)_(nc/c/e)_custID
	required string oldkefuid   = 3; // 老客服id，格式为:(w/m/p)_(nc/c/e)_custID
	required string sessionid   = 4; // 会话id 	
	required string content     = 5; // 头像、昵称等信息(json格式consumer_name,consumer_head,company_name,company_logo,newkefu_name,oldkefu_name)
}

// 老客服申请转移咨询、服务器转发申请给新客服
message SwitchP2CReq
{
	required  P2CSwitchEntity  element  = 1; // 描述转移客服的元素
	required  string           greeting = 2; // 由服务器端填写，申请方填空.转移提示语,utf8编码
	required  uint64           resptime = 3; // 回复时间，仅供客服端使用
}

// 新客服回复转移申请，默认自动允许
message SwitchP2CRsp
{
	required  P2CSwitchEntity  element = 1;  // 描述转移客服的元素
	required  ResultCode  code 	  = 2;  // 是否成功
}

// 服务器主动通知消费者、老客服咨询会话变更了,注意:老客服无需回复(NotifySwitchP2CRsp)
message NotifySwitchP2C
{
  required  P2CSwitchEntity  element   = 1; // 描述转移客服的元素 
	required  string           greeting  = 2; // 转移提示语,utf8编码
  required  uint64           resptime  = 3; // 回复时间，仅供客服端使用
}

// 消费者回复确认接收到客服变更通知
message NotifySwitchP2CRsp
{
  required  P2CSwitchEntity  element  = 1; // 描述转移客服的元素 
	required  ResultCode       code 	  = 2; // 是否成功	
}

// 消费者给企业留言
message P2CLeaveMsgReq  
{
	required string  fromid		  = 1;  // 发送者id，格式为:(w/m/p)_(nc/c/e)_custID
	required string  entid		  = 2;  // 企业id，格式为:custID,19位的纯数字
	required string  sessionid  = 3;  // 会话id 	
	required string  content    = 4;  // json格式的消息内容,utf8编码 包括订单信息和商品信息
  optional  string guid       = 5;  // 客户端填写，服务端回传
}

// 服务器确认消费者留言
message P2CLeaveMsgRsp
{
	required  string      userid  = 1;  // 消息回复的对象, 格式为:(w/m/p)_(nc/c/e)_custID
	optional  string      guid    = 2;  // 客户端填写，服务端回传
	required  ResultCode  code    = 3;  // 是否成功	
}


// 请求拉取客服离线消息
message P2COfflineMsgReq
{    
  required string category = 1;       // "kefu"=客服聊天消息
	required string 	fromid = 2;       // 发送者id,格式:(nc/c/e)_custID 
	required string 	toid	 = 3;       // 接收者id,格式:(w/m/p)_(nc/c/e)_custID          
	required int32  count = 4;          // 一次拉取多少条
	required uint64 lastupdate = 5;     // 最近一条未读消息的时间戳
}
		
// 响应拉取客服离线消息
message P2COfflineMsgRsp
{
  required string userid = 1;         // 消息回复的对象
	repeated P2CMsg msglist = 2;
	required ResultCode code = 3; 
}

// 客服请求分配所有企业留言,即:先变更企业留言为私人离线消息，后汇总离线拉取
message AssignP2CLeaveMsgReq  
{
	required string  fromid		= 1;  // 客服id，格式为:(w/m/p)_(nc/c/e)_custID
	required string  entid		= 2;  // 企业id，格式为:custID,19位的纯数字
}

// 服务器响应客服请求分配所有企业留言
message AssignP2CLeaveMsgRsp  
{
	required string userid   = 1;   // 消息回复的对象
	required ResultCode code = 2;    
}





